--- a/www/index.html
+++ b/www/index.html
@@ -212,7 +212,7 @@
         <div style="height: 7.5%;"></div>
         <div class="col-0 col-sm-0 col-md-1 col-lg-2">
         </div>
-        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+        <form class="col-12 col-sm-12 col-md-10 col-lg-8">
             <br>
             <h1 style="text-align:center; color:#0f0; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;"
                 class="blink-white">
@@ -271,7 +271,7 @@
             </h1>
             </table>
 
-        </div>
+        </form>
         <div class="col-0 col-sm-0 col-md-1 col-lg-2">
         </div>
     </div>
@@ -864,7 +864,7 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+            <form class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1
                     style="text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <br>
@@ -937,7 +937,7 @@
                     <br>
                     <br>
                 </h1>
-            </div>
+            </form>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
         </div>
@@ -945,7 +945,7 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+            <form class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1
                     style="text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <br>
@@ -1022,7 +1022,7 @@
                     <br>
                     <br>
                 </h1>
-            </div>
+            </form>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
         </div>
@@ -2407,7 +2407,7 @@
                 var context = contexts[i];
                 var context_identifier = context.identifier;
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
-                    mode: "xml",
+                    mode: "javascript",
                     lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
