--- a/www/index.html
+++ b/www/index.html
@@ -243,16 +243,16 @@
                     style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                     Password
                 </div>
-                <input type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
-                    class="form-control" id="reset_password" placeholder="Password">
+                <input autocomplete="new-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
+                    class="form-control" id="reset_password" placeholder="New Password">
                 <br>
                 <br>
                 <div
                     style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                     Re-type Password
                 </div>
-                <input type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
-                    class="form-control" id="reset_retype" placeholder="Password">
+                <input autocomplete="new-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
+                    class="form-control" id="reset_retype" placeholder="New Password">
                 <br>
                 <br>
                 <div style="display: inline-block; text-align:center; min-width:50%; max-height:50% !important;">
@@ -895,7 +895,7 @@
                         style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                         Password
                     </div>
-                    <input type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
+                    <input autocomplete="current-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
                         class="form-control" id="login_password" placeholder="Password">
                     <br>
                     <br>
