--- a/www/index.html
+++ b/www/index.html
@@ -243,16 +243,18 @@
                     style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                     Password
                 </div>
-                <input autocomplete="new-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
-                    class="form-control" id="reset_password" placeholder="New Password">
+                <input autocomplete="new-password" type="password"
+                    style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
+                    id="reset_password" placeholder="New Password">
                 <br>
                 <br>
                 <div
                     style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                     Re-type Password
                 </div>
-                <input autocomplete="new-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
-                    class="form-control" id="reset_retype" placeholder="New Password">
+                <input autocomplete="new-password" type="password"
+                    style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
+                    id="reset_retype" placeholder="New Password">
                 <br>
                 <br>
                 <div style="display: inline-block; text-align:center; min-width:50%; max-height:50% !important;">
@@ -469,27 +471,28 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="split left" style="text-align:center;" >
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                        <a style="color:#FFF!important; ">Algorithm Preview:</a>
+                    <a style="color:#FFF!important; ">Algorithm Preview:</a>
                 </h1>
-                        <br>  
+                <br>
                 <h1 class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                        <div class="row" style="height:512px;">
-                            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
+                    <div class="row" style="height:512px;">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12"
+                            style="height:512px; border: 1px solid #fff !important;">
 
-                                <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
-                                    src="canvas.html" id="preview_iframe"></iframe>
-                            </div>
+                            <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
+                                src="canvas.html" id="preview_iframe"></iframe>
                         </div>
-                        <br>
-                        <button style="background-color: rgba(0,0,0,.75);" type="button"
-                            onclick="state.compile_algorithm()" class="btn btn-outline-success mx-auto">Compile</button>
-                        <button style="background-color: rgba(0,0,0,.75);" type="button"
-                            onclick="state.fork_algorithm()" class="btn btn-outline-success mx-auto">Fork</button>
-                        <br>
+                    </div>
+                    <br>
+                    <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.compile_algorithm()"
+                        class="btn btn-outline-success mx-auto">Compile</button>
+                    <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.fork_algorithm()"
+                        class="btn btn-outline-success mx-auto">Fork</button>
+                    <br>
                 </h1>
                 <br>
                 <h1 class="read_only"
@@ -567,8 +570,12 @@
                         </div>
                     </div>
                 </h1>
+                <h1 class="read_only"
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <a style="color:#FFF!important; ">Comments:</a>
+                </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="split right" style="text-align: center;">
 
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -895,8 +902,9 @@
                         style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                         Password
                     </div>
-                    <input autocomplete="current-password" type="password" style="display: inline-block; font-size: 14px !important; width:40%;"
-                        class="form-control" id="login_password" placeholder="Password">
+                    <input autocomplete="current-password" type="password"
+                        style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
+                        id="login_password" placeholder="Password">
                     <br>
                     <br>
                     <div style="display: inline-block; text-align:center; min-width:50%; max-height:50% !important;">
