--- a/www/index.html
+++ b/www/index.html
@@ -895,7 +895,7 @@
                         Email or Name
                     </div>
                     <input type="text" style="display: inline-block; font-size: 14px !important; width:40%;"
-                        class="form-control" id="login_name_or_email" placeholder="Email/Name">
+                        autocomplete="username" class="form-control" id="login_name_or_email" placeholder="Email/Name">
                     <br>
                     <br>
                     <div
