--- a/www/index.html
+++ b/www/index.html
@@ -243,6 +243,9 @@
                     style="display: inline-block; text-align:center; color:#fff; font-size: 14px !important; width:50%;">
                     Password
                 </div>
+                <input autocomplete="username" type="password"
+                    style="display: none; font-size: 14px !important; width:40%;" class="form-control"
+                    id="reset_password" placeholder="New Password">
                 <input autocomplete="new-password" type="password"
                     style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
                     id="reset_password" placeholder="New Password">
