--- a/www/index.html
+++ b/www/index.html
@@ -473,7 +473,7 @@
         </div>
 
         <div class="row connected_content" id="edit"
-            style="display: none; overflow: auto; height: 100%;">
+            style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
             <div class="split left" style="text-align:center;" >
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
