--- a/www/index.html
+++ b/www/index.html
@@ -412,7 +412,7 @@
             Out</button>
     </div>
 
-    <div style="display:block; position:relative; left:0px; top:0px; width:100%; height:100%;">
+    <div style="display:block; position: absolute; left:0px; top:0px; width:100%; height:100%;">
         <div class="row connected_content" id="home"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
