--- a/www/index.html
+++ b/www/index.html
@@ -387,7 +387,7 @@
         </div>
     </div>
     <div class="connected_content fixed"
-        style="text-align:center; display: none; position: relative;; z-index:5; left:0px; top:0px; width:100%; height:auto;"
+        style="text-align:center; display: none; position: absolute;; z-index:5; left:0px; top:0px; width:100%; height:7.5%;"
         id="menu">
         <br>
         <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
@@ -412,7 +412,7 @@
             Out</button>
     </div>
 
-    <div style="display:block; position: absolute; left:0px; top:0px; width:100%; height:100%;">
+    <div style="display:block; position: absolute; left:0px; top:0px; width:100%; height:92.5%;">
         <div class="row connected_content" id="home"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
