--- a/www/index.html
+++ b/www/index.html
@@ -387,28 +387,28 @@
         </div>
     </div>
     <div class="connected_content fixed"
-        style="text-align:center; display: table; position: absolute;; z-index:5; left:0px; top:0px; width:100%; height:7.5%;"
+        style="text-align:center; display: none; position: absolute;; z-index:5; left:0px; top:0px; width:100%; height:7.5%;"
         id="menu">
         <br>
-        <button type="button" style="display: inline-table; background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.HOME); ">Home</button>
-        <button type="button" style="display: inline-table; background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.BROWSE); ">Browse</button>
-        <button type="button" style="display: inline-table; background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.EDIT); ">Edit</button>
-        <button type="button" style="display: inline-table; background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.CREATE); ">Create</button>
-        <button id="menu_profile_button" style="display: inline-table; background-color: rgba(0,0,0,.75);" type="button"
-            class="logged_in_content btn btn-outline-success mx-auto"
+        <button id="menu_profile_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            class="logged_in_content menu-button"
             onclick="state.show_page(pages.PROFILE);;">Profile</button>
-        <button id="menu_login_button" style="display: inline-table; background-color: rgba(0,0,0,.75);" type="button"
-            class="logged_out_content btn btn-outline-success mx-auto"
+        <button id="menu_login_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            class="logged_out_content menu-button"
             onclick="state.show_page(pages.LOGIN);">Login</button>
-        <button id="menu_signup_button" style="display: inline-table; background-color: rgba(0,0,0,.75);" type="button"
-            class="logged_out_content btn btn-outline-success mx-auto" onclick="state.show_page(pages.SIGNUP);">Sign
+        <button id="menu_signup_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            class="logged_out_content menu-button" onclick="state.show_page(pages.SIGNUP);">Sign
             Up</button>
-        <button id="menu_logout_button" style="display: inline-table; background-color: rgba(0,0,0,.75);" type="button"
-            class="logged_in_content btn btn-outline-danger mx-auto" onclick="state.show_page(pages.LOGOUT);">Log
+        <button id="menu_logout_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            class="logged_in_content menu-button" onclick="state.show_page(pages.LOGOUT);">Log
             Out</button>
     </div>
 
