--- a/www/index.html
+++ b/www/index.html
@@ -390,26 +390,26 @@
         style="text-align:center; display: none; position: absolute;; z-index:5; left:0px; top:0px; width:100%; height:7.5%;"
         id="menu">
         <br>
-        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
+        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.HOME); ">Home</button>
-        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.BROWSE); ">Browse</button>
-        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.EDIT); ">Edit</button>
-        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.CREATE); ">Create</button>
-        <button id="menu_profile_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
+            onclick="state.show_page(pages.BROWSE); ">Browse</div>
+        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
+            onclick="state.show_page(pages.EDIT); ">Edit</div>
+        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
+            onclick="state.show_page(pages.CREATE); ">Create</div>
+        <div id="menu_profile_button" style=" background-color: rgba(0,0,0,.75);" 
             class="logged_in_content menu-button"
-            onclick="state.show_page(pages.PROFILE);;">Profile</button>
-        <button id="menu_login_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            onclick="state.show_page(pages.PROFILE);;">Profile</div>
+        <div id="menu_login_button" style=" background-color: rgba(0,0,0,.75);" 
             class="logged_out_content menu-button"
-            onclick="state.show_page(pages.LOGIN);">Login</button>
-        <button id="menu_signup_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            onclick="state.show_page(pages.LOGIN);">Login</div>
+        <div id="menu_signup_button" style=" background-color: rgba(0,0,0,.75);" 
             class="logged_out_content menu-button" onclick="state.show_page(pages.SIGNUP);">Sign
-            Up</button>
-        <button id="menu_logout_button" style=" background-color: rgba(0,0,0,.75);" type="button"
+            Up</div>
+        <div id="menu_logout_button" style=" background-color: rgba(0,0,0,.75);" 
             class="logged_in_content menu-button" onclick="state.show_page(pages.LOGOUT);">Log
-            Out</button>
+            Out</div>
     </div>
 
     <div style="display:block; position: absolute; left:0px; top:7.5%; width:100%; height:92.5%;">
