--- a/www/index.html
+++ b/www/index.html
@@ -391,7 +391,7 @@
         id="menu">
         <br>
         <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.HOME); ">Home</button>
+            onclick="state.show_page(pages.HOME); ">Home</div>
         <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
             onclick="state.show_page(pages.BROWSE); ">Browse</div>
         <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
