--- a/www/index.html
+++ b/www/index.html
@@ -386,30 +386,16 @@
         <div class="col-0 col-sm-0 col-md-1 col-lg-2">
         </div>
     </div>
-    <div class="connected_content fixed"
-        style="text-align:center; display: none; position: absolute;; z-index:5; left:0px; top:0px; width:100%; height:7.5%;"
-        id="menu">
-        <br>
-        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.HOME); ">Home</div>
-        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.BROWSE); ">Browse</div>
-        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.EDIT); ">Edit</div>
-        <div style=" background-color: rgba(0,0,0,.75);" class="menu-button"
-            onclick="state.show_page(pages.CREATE); ">Create</div>
-        <div id="menu_profile_button" style=" background-color: rgba(0,0,0,.75);" 
-            class="logged_in_content menu-button"
-            onclick="state.show_page(pages.PROFILE);;">Profile</div>
-        <div id="menu_login_button" style=" background-color: rgba(0,0,0,.75);" 
-            class="logged_out_content menu-button"
-            onclick="state.show_page(pages.LOGIN);">Login</div>
-        <div id="menu_signup_button" style=" background-color: rgba(0,0,0,.75);" 
-            class="logged_out_content menu-button" onclick="state.show_page(pages.SIGNUP);">Sign
-            Up</div>
-        <div id="menu_logout_button" style=" background-color: rgba(0,0,0,.75);" 
-            class="logged_in_content menu-button" onclick="state.show_page(pages.LOGOUT);">Log
-            Out</div>
+
+    <div class="topnav">
+        <a class="active" onclick="state.show_page(pages.HOME); ">Home</a>
+        <a onclick="state.show_page(pages.BROWSE); ">Browse</a>
+        <a onclick="state.show_page(pages.EDIT); ">Edit</a>
+        <a onclick="state.show_page(pages.CREATE); ">Create</a>
+        <a onclick="state.show_page(pages.PROFILE);;">Profile</a>
+        <a onclick="state.show_page(pages.LOGIN);">Login</a>
+        <a class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
+        <a class="logged_out_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
     </div>
 
     <div style="display:block; position: absolute; left:0px; top:7.5%; width:100%; height:92.5%;">
@@ -474,7 +460,7 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
-            <div class="split left" style="text-align:center;" >
+            <div class="split left" style="text-align:center;">
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a style="color:#FFF!important; ">Algorithm Preview:</a>
