--- a/www/index.html
+++ b/www/index.html
@@ -395,7 +395,7 @@
         <a id="profile_button" onclick="state.show_page(pages.PROFILE);;">Profile</a>
         <a id="login_button" onclick="state.show_page(pages.LOGIN);">Login</a>
         <a id="signup_button" class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
-        <a id="log_out_button" class="logged_out_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
+        <a id="log_out_button" class="logged_in_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
     </div>
 
     <div class="belownav">
