--- a/www/index.html
+++ b/www/index.html
@@ -396,6 +396,9 @@
         <a id="login_button" onclick="state.show_page(pages.LOGIN);">Login</a>
         <a id="signup_button" class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
         <a id="log_out_button" class="logged_in_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
+        <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
+          <i class="fa fa-bars"></i>
+        </a>
     </div>
 
     <div class="belownav">
@@ -3722,6 +3725,14 @@
             this.render_stages(new_programs);
         }
 
+        GlobalState.prototype.toggle_nav = function () {
+            var x = document.getElementById("menu");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
 
         window.onload = function () {
             window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
