--- a/www/index.html
+++ b/www/index.html
@@ -397,7 +397,9 @@
         <a id="signup_button" class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
         <a id="log_out_button" class="logged_in_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
         <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
-          <i class="fa fa-bars"></i>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
         </a>
     </div>
 
