--- a/www/index.html
+++ b/www/index.html
@@ -403,7 +403,7 @@
         </a>
     </div>
 
-    <div class="belownav">
+    <div class="belownav" onclick="state.hide_nav();">
         <div class="row connected_content" id="home"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
