--- a/www/index.html
+++ b/www/index.html
@@ -405,7 +405,7 @@
 
     <div class="belownav" onclick="state.hide_nav();">
         <div class="row connected_content" id="home"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
@@ -769,7 +769,7 @@
         </div>
 
         <div class="row connected_content" id="delete_account"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
@@ -831,7 +831,7 @@
         </div>
 
         <div class="row connected_content" id="profile"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
@@ -853,7 +853,7 @@
             </div>
         </div>
         <div class="row connected_content" id="query"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align:center!important">
@@ -863,7 +863,7 @@
         </div>
 
         <div class="row connected_content" id="login"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <form class="col-12 col-sm-12 col-md-10 col-lg-8">
@@ -945,7 +945,7 @@
             </div>
         </div>
         <div class="row connected_content" id="signup"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+            style="display: none;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <form class="col-12 col-sm-12 col-md-10 col-lg-8">
