--- a/www/index.html
+++ b/www/index.html
@@ -391,8 +391,8 @@
         <a id="home_button" onclick="state.show_page(pages.HOME); ">Home</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
-        <a id="create_button" onclick="state.show_page(pages.CREATE); ">Create</a>
-        <a id="profile_button" onclick="state.show_page(pages.PROFILE);;">Profile</a>
+        <a id="create_button" class="logged_in_content" onclick="state.show_page(pages.CREATE); ">Create</a>
+        <a id="profile_button" class="logged_in_content" onclick="state.show_page(pages.PROFILE);;">Profile</a>
         <a id="login_button" class="logged_out_content" onclick="state.show_page(pages.LOGIN);">Login</a>
         <a id="signup_button" class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
         <a id="log_out_button" class="logged_in_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
