--- a/www/index.html
+++ b/www/index.html
@@ -387,7 +387,7 @@
         </div>
     </div>
 
-    <div id="menu" class="topnav">
+    <div id="menu" style="display: none;" class="topnav">
         <a id="home_button" onclick="state.show_page(pages.HOME); ">Home</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
@@ -409,6 +409,7 @@
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+                <br>
                 <h1
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     Welcome!
