--- a/www/index.html
+++ b/www/index.html
@@ -392,10 +392,10 @@
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
         <a id="create_button" onclick="state.show_page(pages.CREATE); ">Create</a>
-        <a id="profile_button" class="logged_in_content" onclick="state.show_page(pages.PROFILE);;">Profile</a>
+        <a id="profile_button" class="logged_in_content" style="display: none" onclick="state.show_page(pages.PROFILE);;">Profile</a>
         <a id="login_button" class="logged_out_content" onclick="state.show_page(pages.LOGIN);">Login</a>
-        <a id="signup_button" class="logged_out_content" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
-        <a id="log_out_button" class="logged_in_content" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
+        <a id="signup_button" class="logged_out_content" style="display: none" onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
+        <a id="log_out_button" class="logged_in_content" style="display: none" onclick="state.show_page(pages.LOGOUT);">Log Out</a>
         <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
