--- a/www/index.html
+++ b/www/index.html
@@ -468,10 +468,10 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
-            <div class="split left" style="text-align:center;">
-                <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+            <div class="split row left" style="text-align:center;">
+                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
                 </div>
-                <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+                <div class="col-12 col-sm-12 col-md-10 col-lg-10">
                     <br>
                     <h1 class="read_only"
                         style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -576,13 +576,13 @@
                         <a style="color:#FFF!important; ">Comments:</a>
                     </h1>
                 </div>
-                <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
                 </div>
             </div>
-            <div class="split right" style="text-align: center;">
-                <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+            <div class="split row right" style="text-align: center;">
+                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
                 </div>
-                <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+                <div class="col-12 col-sm-12 col-md-10 col-lg-10">
                 <br>
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -776,7 +776,7 @@
                 <br>
                 <br>
                 </div>
-                <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
                 </div>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
