--- a/www/index.html
+++ b/www/index.html
@@ -1708,9 +1708,10 @@
             $.each($(".logged_out_content"), function () {
                 if ($(this).is(":hidden") && ($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0)))
                 {
-                    $(this).fadeIn(1000).css("display", "block");
                     if(($(this).parents().has("#menu").length > 0) && window.innerWidth < 600)
-                        $(this).fadeIn(1000).css("display", "");
+                        $(this).show();
+                    else
+                        $(this).fadeIn(1000).css("display", "block");
                 }
             });
         }
@@ -1719,9 +1720,10 @@
                 //if($(this).is(":hidden") && 
                 if (($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0)))
                 {
-                    $(this).fadeIn(1000).css("display", "block");
                     if(($(this).parents().has("#menu").length > 0) && window.innerWidth < 600)
-                        $(this).fadeIn(1000).css("display", "");
+                        $(this).show();
+                    else
+                        $(this).fadeIn(1000).css("display", "block");
                 }
             });
             $.each($(".logged_out_content"), function () {
