--- a/www/index.html
+++ b/www/index.html
@@ -1709,7 +1709,7 @@
                 if ($(this).is(":hidden") && ($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0)))
                 {
                     if(($(this).parents().has("#menu").length > 0) && window.innerWidth < 600)
-                        $(this).show();
+                        $(this).attr("style", "");
                     else
                         $(this).fadeIn(1000).css("display", "block");
                 }
@@ -1721,7 +1721,7 @@
                 if (($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0)))
                 {
                     if(($(this).parents().has("#menu").length > 0) && window.innerWidth < 600)
-                        $(this).show();
+                        $(this).attr("style", "");
                     else
                         $(this).fadeIn(1000).css("display", "block");
                 }
