--- a/www/index.html
+++ b/www/index.html
@@ -248,7 +248,7 @@
                     id="reset_password" placeholder="New Password">
                 <input autocomplete="new-password" type="password"
                     style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
-                    id="reset_password" placeholder="New Password">
+                    id="reset_retype" placeholder="New Password">
                 <br>
                 <br>
                 <div
