--- a/www/index.html
+++ b/www/index.html
@@ -245,10 +245,10 @@
                 </div>
                 <input autocomplete="username" type="password"
                     style="display: none; font-size: 14px !important; width:40%;" class="form-control"
-                    id="reset_password" placeholder="New Password">
+                    id="reset_username" placeholder="New Password">
                 <input autocomplete="new-password" type="password"
                     style="display: inline-block; font-size: 14px !important; width:40%;" class="form-control"
-                    id="reset_retype" placeholder="New Password">
+                    id="reset_password" placeholder="New Password">
                 <br>
                 <br>
                 <div
@@ -1159,6 +1159,7 @@
                 if (page.toLowerCase() == initial_path.toLowerCase()) {
                     if (page == pages.RESET && this.first_connection && user_query_param && code_query_param) {
                         this.user_name = user_query_param;
+                        $("#reset_username").val(user_query_param);
                         this.show_page(pages.RESET, null, null, true, false);
                         this.show_page(pages.PROCESSING, "Validatings...", "Please be patient.", false);
                         this.send(Message.encode({
