--- a/www/index.html
+++ b/www/index.html
@@ -442,7 +442,8 @@
                     <br>
 
                     <div style="text-align: center;">
-                        <button type="button" class="btn btn-outline-primary mx-auto"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                            class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.POLICY);">View
                             Privacy Policy</button>
                         <button type="button" style=" background-color: rgba(0,0,0,.75);"
@@ -454,9 +455,11 @@
                         <button type="button" style=" background-color: rgba(0,0,0,.75);"
                             class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.CREATE); ">Create</button>
-                        <button type="button" class="btn btn-outline-success mx-auto"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                            class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.PROFILE);">Profile</button>
-                        <button type="button" class="btn btn-outline-danger mx-auto"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                            class="btn btn-outline-danger mx-auto"
                             onclick="state.show_page(pages.LOGOUT);">Log
                             Out</button>
                     </div>
