--- a/www/index.html
+++ b/www/index.html
@@ -390,7 +390,7 @@
     <div id="menu" style="display: none;" class="topnav">
         <a id="home_button" onclick="state.show_page(pages.HOME); ">Home</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
-        <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
+        <a id="edit_button" data-role="button" href="#edit">Edit</a>
         <a id="create_button" onclick="state.show_page(pages.CREATE); ">Create</a>
         <a id="profile_button" class="logged_in_content" style="display: none"
             onclick="state.show_page(pages.PROFILE);;">Profile</a>
