--- a/www/index.html
+++ b/www/index.html
@@ -3332,10 +3332,10 @@
                 this.add_stage(algorithm.pipeline.stages[i]);
         }
 
-        window.onpopstate = function (event) {
-            console.log(event);
-            state.pop_page(event)
-        };
+        // window.onpopstate = function (event) {
+        //     console.log(event);
+        //     state.pop_page(event)
+        // };
 
         var on_resources_loaded = function () {
             console.log($)//Show me the money
