--- a/www/index.html
+++ b/www/index.html
@@ -469,7 +469,7 @@
             </div>
         </div>
 
-        <div class="row connected_content" id="edit"
+        <div class="row connected_content" id="edit" data-role="page"
             style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
             <div class="split row left" style="text-align:center;">
                 <div class="col-0 col-sm-0 col-md-1 col-lg-1">
