--- a/www/index.html
+++ b/www/index.html
@@ -25,9 +25,10 @@
     <script type="text/javascript" src="codemirror/addon/search/jump-to-line.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/protobuf.js"></script>
 
