--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="codemirror/addon/search/jump-to-line.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.css" />
     <link rel="stylesheet" href="css/style.css" />
 
     <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
