--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.router.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/protobuf.js"></script>
 
