--- a/www/index.html
+++ b/www/index.html
@@ -473,9 +473,9 @@
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
             <div class="split row left" style="text-align:center;">
-                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
+                <div class="col-0 col-sm-0 col-md-0 col-lg-1">
                 </div>
-                <div class="col-12 col-sm-12 col-md-10 col-lg-10">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-10">
                     <br>
                     <h1 class="read_only"
                         style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -580,13 +580,13 @@
                         <a style="color:#FFF!important; ">Comments:</a>
                     </h1>
                 </div>
-                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
+                <div class="col-0 col-sm-0 col-md-0 col-lg-1">
                 </div>
             </div>
             <div class="split row right" style="text-align: center;">
-                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
+                <div class="col-0 col-sm-0 col-md-0 col-lg-1">
                 </div>
-                <div class="col-12 col-sm-12 col-md-10 col-lg-10">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-10">
                     <br>
                     <h1 class="editable"
                         style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -602,7 +602,7 @@
                                 <br>
                             </div>
                             <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                                <input id="algorithm_title" style="text-align:center; color:#fff;"
+                                <input id="algorithm_title" style="width:inherit; text-align:center; color:#fff;"
                                     placeholder="Algorithm name..." value=""></input>
                                 <br>
                                 <br>
@@ -788,7 +788,7 @@
                     <br>
                     <br>
                 </div>
-                <div class="col-0 col-sm-0 col-md-1 col-lg-1">
+                <div class="col-0 col-sm-0 col-md-0 col-lg-1">
                 </div>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
@@ -2673,7 +2673,7 @@
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
-                    '            <input id="' + program_identifier + '_name" style="text-align:center; color:#fff;" placeholder="Program name..."\n' +
+                    '            <input id="' + program_identifier + '_name" style="width:inherit; text-align:center; color:#fff;" placeholder="Program name..."\n' +
                     '                value="' + program.name + '"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
@@ -2706,7 +2706,7 @@
                         '                <br>\n' +
                         '            </div>\n' +
                         '            <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
-                        '                <input id="' + uniform_identifier + '_name" style="text-align:center; color:#fff;" placeholder="uniform name..."\n' +
+                        '                <input id="' + uniform_identifier + '_name" style="width:inherit; text-align:center; color:#fff;" placeholder="uniform name..."\n' +
                         '                    value="' + uniform.name + '"></input>\n' +
                         '                <br>\n' +
                         '                <br>\n' +
@@ -3375,7 +3375,7 @@
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
-                    '            <input id="' + stage_identifier + '_name" style="text-align:center; color:#fff;" placeholder="Program name..."\n' +
+                    '            <input id="' + stage_identifier + '_name" style="width:inherit; text-align:center; color:#fff;" placeholder="Program name..."\n' +
                     '                value="' + stage.name + '""></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
@@ -3390,7 +3390,7 @@
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
-                    '            <input style="text-align:center; color:#fff;" placeholder="Context name..."\n' +
+                    '            <input style="width:inherit; text-align:center; color:#fff;" placeholder="Context name..."\n' +
                     '                id="' + stage_identifier + '_context_name" value="' + stage.context_name + '"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
@@ -3405,7 +3405,7 @@
                     '            <br>\n' +
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
-                    '            <input style="text-align:center; color:#fff;" placeholder="Program name..."\n' +
+                    '            <input style="width:inherit; text-align:center; color:#fff;" placeholder="Program name..."\n' +
                     '                id="' + stage_identifier + '_program_name" value="' + stage.program_name + '"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
