--- a/www/edit.html
+++ b/www/edit.html
@@ -314,3 +314,27 @@
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
 </div>
+
+<script>
+    window.onload = function () {
+        window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
+            mode: "xml",
+            lineNumbers: false,
+            theme: "the-matrix",
+            autoRefresh: true,
+            lineWrapping: true
+        });
+        window.html_editor.getWrapperElement().id = "algorithm_html_codemirror"
+        window.javascript_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_javascript_textarea"), {
+            mode: "javascript",
+            lineNumbers: false,
+            theme: "the-matrix",
+            autoRefresh: true,
+            lineWrapping: true
+        });
+        window.javascript_editor.getWrapperElement().id = "algorithm_javascript_codemirror"
+        window.html_editor.setValue('<!--Enter HTML here. -->');
+        window.javascript_editor.setValue('//Enter JavaScript here.');
+        load_preview_iframe()
+    }
+</script>
