--- a/www/index.html
+++ b/www/index.html
@@ -2831,6 +2831,7 @@
         }
 
         window.onload = function () {
+            on_resources_loaded();
             state.show_nav();
             var page = window.location.hash;
             $.get(page + '.html', function (response) {
